# Template-markdown

./: .gitignore  De-Cuong-Thuc-Tap-WENet.docx  README.md  adm.spec  build.bat  main.py  pyproject.toml  requirements.txt
.agent/workflows/: adm-convert.md  adm-export.md  adm-generate.md  adm-help.md  adm-info.md  adm-merge.md  adm-regenerate.md  adm-renew.md  adm-zolo.md
docs/: brainstorm_adm.md  implementation_plan.md  prd_adm.md  task.md  task_plan.md
function1/: __init__.py
function1/exporters/: __init__.py  latex_exporter.py
function1/parsers/: __init__.py  docx_parser.py  ir.py  pdf_parser.py
function1/processors/: __init__.py  splitter.py
function2/: __init__.py
function2/Segmentation/phase1_init/: outline.yaml  project_info.yaml
function2/Segmentation/phase2_sections/: metadata.yaml  section_003.md  section_004.md  section_005.md  section_006.md
function2/Segmentation/phase3_content/: 01_de_cuong_thuc_tap.md  section_001_gioi_thieu.md  section_002_co_so_ly_thuyet.md  section_003_noi_dung_thuc_hien.md  section_004_ket_luan.md
function2/generators/: __init__.py  prompt_builder.py  section_generator.py
function2/rules/: __init__.py  rule_bases.yaml  rule_loader.py
function2/templates/: __init__.py
function2/templates/converters/: __init__.py  docx_merger.py  md_to_docx.py  md_to_pdf.py
function2/templates/official/: __init__.py  official_templates.py
function2/validators/: __init__.py  nd30_validator.py
function3/: __init__.py
function3/extractors/: __init__.py  content_extractor.py
src/: __init__.py
src/cli/: __init__.py  convert.py  generate.py  main.py  regenerate.py
src/core/: __init__.py  config.py
src/gui/: __init__.py  function1_view.py  function2_view.py  main_window.py  settings_view.py
src/templates/: __init__.py  markdown_cleaner.py  section_renderer.py  text_processor.py
tests/: test_cli.py
(+9 files in other folders)
